--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
   -->
 
 <resources>
+    <string name="app_name">Bakery</string>
     <string name="intro_text">Desserts</string>
     <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
     <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate
@@ -47,7 +48,9 @@
     <string name="action_contact_message">You selected Contact.</string>
     <string name="title_activity_order">Order Activity</string>
     <string name="title_activity_settings">Settings</string>
-
+    <string name="title_activity_login">Login Activity</string>
+    <string name="title_activity_logout">Logout Activity</string>
+    <string name="title_activity_register">Register Activity</string>
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
@@ -123,5 +126,7 @@
     <string name="login2">LOGIN</string>
     <string name="don_t_have_an_account_register_here">Don\'t have an account! Register here.</string>
     <string name="todo">TODO</string>
+    <string name="logout">LOGOUT</string>
+    <string name="your_profile">Your Profile</string>
 
 </resources>
