--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,15 +121,40 @@
     <string name="phone_numb">phone_number</string>
     <string name="register">Register</string>
     <string name="already_have_an_account_login_here">Already have an account! Login Here</string>
-    <string name="phone_number">Phone Number</string>
+    <string name="phone_number2">Phone Number</string>
     <string name="login">Login</string>
     <string name="login2">LOGIN</string>
     <string name="don_t_have_an_account_register_here">Don\'t have an account! Register here.</string>
-    <string name="todo">TODO</string>
+
     <string name="logout">LOGOUT</string>
     <string name="your_profile">Your Profile</string>
 
     <string name="checkbox">Remeber my login information</string>
     <string name="remember_my_login_information">Remember my login information</string>
+    <string name="your_email">Your Email</string>
+    <string name="your_name">Your Name</string>
+    <string name="phone_number">Phone Number</string>
+
+    <string name="title_activity_main">MainActivity</string>
+    <string name="your_name2">Your Name</string>
+    <string name="buttoneditprofile">Button</string>
+    <string name="textview">TextView</string>
+    <string name="your_email_address">Your Email Address</string>
+    <string name="textview2">TextView</string>
+    <string name="phone_number3">Phone Number</string>
+    <string name="textview3">TextView</string>
+    <string name="todo2">TODO</string>
+    <string name="todo">TODO</string>
+
+    <string name="button">Button</string>
+    <string name="reset_password">Reset Password</string>
+    <string name="edit_your_profile">Edit Your Profile</string>
+    <string name="todo3" />
+    <string name="email2">Email:</string>
+
+    <string name="full_name2">Full Name:</string>
+    <string name="phone_number4">Phone Number:</string>
+    <string name="email4">Email:</string>
+    <string name="save">SAVE</string>
 
 </resources>
